--- a/appcode/HeriHomes/app/src/main/res/values/strings.xml
+++ b/appcode/HeriHomes/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Heri Homes</string>
+    <string name="title_activity_property">Property</string>
 </resources>
